--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <tr>
           <td> <img src="plan.png" alt='COMUTER '> </img></td>
           <td>
-            <p> style= "font-size:1.06rem"> Want to keep continue learning WEB DEVELPOMENT and ML .<br> My goal is to learn data structure and
+            <p style= "font-size:1.06rem"> Want to keep continue learning WEB DEVELPOMENT and ML .<br> My goal is to learn data structure and
               algorithm in a better way  so that I can solve competitive <br>
                coding problem in limited time....
             </p>
