--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
         <tr>
           <td> <img src="plan.png" alt='COMUTER '> </img></td>
           <td>
-            <p style= "font-size:1.1rem"> Want to keep continue learning WEB DEVELPOMENT and ML .<br> My goal is to learn data structure <br>
+            <p style= "font-size:1.1rem"> Want to keep continue learning WEB DEVELPOMENT and ML . My goal is to learn data structure <br>
               and
-              algorithm in a better way  so that I can solve competitive <br>
+              algorithm in a better way  so that I can solve competitive 
                coding problem in limited time....
             </p>
           </td>
